--- a/main.css
+++ b/main.css
@@ -145,7 +145,7 @@ body.serif {
     display: none;
     flex-direction: column;
     align-items: center; /* Center align items */
-    border-bottom: 2px solid;
+    /* border-bottom: 2px solid; */
     border-top: 2px solid;
 }
 
@@ -180,18 +180,20 @@ h1 {
     background-color: white;
     text-align: center;
     padding-top: 3px;
-    border-top: 2px solid;
-    border-bottom: 2px solid;
+border: 2px solid;
     width: 100%;
     margin: 0;
+    position: relative;
+    right: 5px;
 }
 
 h2 {
     text-align: center;
-    border-top: 2px solid;
-    border-bottom: 2px solid;
+    border: 2px solid;
     width: 100%;
     padding: 10px;
+    position: relative;
+    right: 5px;
     
 }
 
@@ -199,10 +201,15 @@ h2 {
     text-align: center;
 }
 
+
 .left-section {
+
     width: 20vw;
     height: 100vh;
  
+    position: fixed;
+    top:0;
+    left: 0;
 
     z-index: 1;
 }
@@ -273,6 +280,9 @@ h2 {
     width: 60vw;
 
     padding-top: 50px;
+    padding-left: 20px;
+    padding-right: 20px;
+  
 
     border-left: 2px solid;
     border-right: 2px solid;
@@ -281,6 +291,8 @@ h2 {
     display: flex;
     flex-direction: column;
 
+    position: relative;
+    left: 20vw;
 
 }
 
@@ -288,6 +300,8 @@ h2 {
     max-width: 700px;
     font-size: 1.2rem;
     text-align: left;
+    position: relative;
+    left: 5px;
     }
 
 .middle-section li {
@@ -338,6 +352,10 @@ h2 {
     display: block; /* Show menu items when menu is opened */
 }
 
+p {
+    margin-bottom: 10px;
+}
+
 .right-section {
     width: 20vw;
     height: 100vh;
@@ -346,6 +364,7 @@ h2 {
     top: 0;
     right: 0;
     z-index: 1;
+    border-left: 2px solid;
 }
 
 .select-font {
