--- a/main.css
+++ b/main.css
@@ -291,7 +291,7 @@ h2 {
   
 
     border-left: 2px solid;
-    /* border-right: 2px solid; */
+    border-right: 2px solid;
    
 
     display: flex;
