--- a/main.css
+++ b/main.css
@@ -291,7 +291,6 @@ h2 {
   
 
     border-left: 2px solid;
-    border-right: 2px solid;
    
 
     display: flex;
@@ -398,6 +397,7 @@ p {
     position: fixed;
     top: 0;
     right: 0;
+    border-left: 2px solid;
     /* z-index: 1; */
 }
 
