--- a/css/homepage.css
+++ b/css/homepage.css
@@ -598,6 +598,10 @@ label.color-change-2 {
     background-color: black;
 }
 
+.top-bar-homepage.color-change-2 {
+    background-color: black;
+}
+
 
 /* ----------------- PRACTICE PAGES -----------------  */
 
