--- a/main.css
+++ b/main.css
@@ -202,12 +202,16 @@ h1 {
     text-align: center;
     padding-top: 3px;
     border: 2px solid;
-    outline: 2px solid coral;
+
     border-radius: 5px;
     width: 100%;
     margin: 0;
     position: relative;
     right: 5px;
+}
+
+h1.open-dyslexic {
+    font-size: 1.2rem;
 }
 
 h2 {
