--- a/css/homepage.css
+++ b/css/homepage.css
@@ -201,6 +201,16 @@ border: 2px solid;
     right: 5px;
 }
 
+h1.serif {
+padding-left: 8px;
+padding-bottom: 3px;
+}
+
+h1.open-dyslexic {
+font-size: 2.1rem;
+padding-left: 2px;
+}
+
 h2 {
     text-align: center;
     border: 2px solid;
@@ -336,6 +346,7 @@ img {
 }
 
 .mobile-tablet {
+
     background-color: white;
     color: black;
     width: 100vw;
@@ -345,8 +356,10 @@ img {
 }
 
 .mobile-tablet p {
+    padding: 15px;
     position: relative;
-    left: 20px;
+    left: 10px;
+    bottom: 10px;
 }
 
 .next-page {
@@ -396,6 +409,10 @@ img {
 p {
     margin-bottom: 10px;
     color: black;
+}
+
+p.comic-sans {
+    font-size: 1.1rem;
 }
 
 .photo-container {
@@ -500,7 +517,7 @@ p {
 }
 
 .top-bar-homepage {
-    width: 79.12vw;
+    width: 80vw;
     height: 55px;
     position: fixed;
     bottom: 57px;
@@ -630,6 +647,7 @@ p.color-change-2 {
 
 .right-section.color-change-2 {
     background-color: black;
+    border-left: 2px solid white;
 }
 
 .customize.color-change-2 {
@@ -640,6 +658,7 @@ p.color-change-2 {
     border-top: 2px solid white;
     border-bottom: 2px solid white;
 }
+
 
 
 
