fixed a few things

--- a/css/homepage.css
+++ b/css/homepage.css
@@ -161,6 +161,18 @@ body.serif {
     border-top: 2px solid;
 }
 
+
+.customize-icon {
+    height: 19px;
+    width: 19px;
+    background-color:#033838;
+    border: 2px solid #f1e7be;
+    border-radius: 50%;
+    display: inline-block;
+    position: relative;
+    right: 2px;
+  }
+
 .customize-icon-dark-mode {
     display: none;
 }
@@ -180,6 +192,13 @@ body.serif {
    padding: 10px;
 }
 
+.favicon {
+    border: none;
+    width: 8%;
+    position: relative;
+    top: 1px;
+}
+
 
 .font-selector {
     padding: 20px 0;
@@ -188,28 +207,28 @@ body.serif {
     gap: 2px;
   }
 
+  h1,p {
+    margin: 0;
+    padding: 10px;
+  }
+
 
 h1 {
     background-color: white;
     color: black;
     text-align: center;
-    padding-top: 3px;
-border: 2px solid;
-    width: 100%;
-    margin: 0;
+
+    line-height: 1.2;
+    padding: 10px;
+    background-color: transparent;
+    border: none;
+
     position: relative;
-    right: 5px;
+    right: 0;
 }
 
-h1.serif {
-padding-left: 8px;
-padding-bottom: 3px;
-}
 
-h1.open-dyslexic {
-font-size: 2.1rem;
-padding-left: 2px;
-}
+
 
 h2 {
     text-align: center;
@@ -309,41 +328,8 @@ img {
     border-radius: 3px;
     }
 
-.middle-section {
-    width: 80vw;
-/* 
-    padding-top: 50px;
-    padding-left: 20px;
-    padding-right: 20px; */
-   
-
-    display: flex;
 
 
-    position: relative;
-    left: 0;
-
-}
-
-.middle-section p {
-    max-width: 700px;
-    font-size: 1.2rem;
-    text-align: left;
-    position: relative;
-    left: 5px;
-    }
-
-
-.middle-section-practice-photos {
-    display: flex; 
-    flex-direction: column; 
-    justify-content: center; 
-    align-items: center;
-}
-
-.middle-section li {
-    max-width: 700px;
-}
 
 .mobile-tablet {
 
@@ -362,36 +348,7 @@ img {
     bottom: 10px;
 }
 
-.next-page {
-   display: flex;
-   flex-direction: column;
-   justify-content: center;
-   align-items: center;
-   gap: 5px;
-}
 
-.next-page-button {
-    background-color: white;
-
-    width: fit-content;
-    height: fit-content;
-
-    margin-bottom: 30px;
-
-    border: 2px solid;
-    font-size: 1.5rem;
-    border-radius: 3px; 
-
-    position: relative;
-    bottom: 0;
-
-    cursor: pointer;
-    padding: 10px;
-        }
-
-.next-page-button:hover {
-    background-color:#cfd1ed;
-}
 
 .open .close-button {
     display: block; /* Show close button when menu is opened */
@@ -407,8 +364,9 @@ img {
 }
 
 p {
-    margin-bottom: 10px;
     color: black;
+    text-align: center;
+    border-top: 2px solid;
 }
 
 p.comic-sans {
@@ -424,33 +382,8 @@ p.comic-sans {
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
-
 }
 
-
-.practice-photo:hover {
-    transform: rotate(3deg);
-    cursor: pointer;
-    /* border: 2px solid; */
-    
-}
-
-.practice-photo-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    align-content: center;
-    justify-content: center;
-}
-
-.practice-photo-container a{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    align-content: center;
-    justify-content: center;
-    width: fit-content;
-}
 
  .right-section {
     width: 20vw;
@@ -483,28 +416,24 @@ p.comic-sans {
   .title {
     background-color: white;
     width: 20vw;
+    height: auto;
+
     position: fixed;
     bottom: 0;
     right: 0;
+
     z-index: 8000;
+
     border: 2px solid black;
     border-right: none;
     border-bottom: none;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
 }
 
-.title p {
-    text-align: center;
-    border-top: 2px solid;
-    padding-top: 10px;
-}
-
-.title h1 {
-    border: none;
-    position: relative;
-    left: 17px;
-    top: 12px;
-    width: fit-content;
-}
 
 .top-menu {
     background-color: white;
