--- a/main.css
+++ b/main.css
@@ -168,6 +168,17 @@ body.serif {
     border-top: 2px solid;
 }
 
+.customize-icon {
+  height: 19px;
+  width: 19px;
+  background-color:#033838;
+  border: 2px solid #f1e7be;
+  border-radius: 50%;
+  display: inline-block;
+  position: relative;
+  right: 2px;
+}
+
 .customize-icon-dark-mode {
     display: none;
 }
@@ -342,6 +353,10 @@ h2 {
 
 .middle-section li {
     max-width: 700px;
+}
+
+.mobile-disappear {
+    display: inline-block;
 }
 
 .mobile-tablet {
@@ -711,10 +726,6 @@ label.color-change-2 {
 /* ______________________________________________________________________ */
 
 @media only screen and (max-width: 320px) {
-    .mobile-tablet {
-        display: block;
-    }
-
     .left-section {
         display: none;
     }
@@ -723,9 +734,18 @@ label.color-change-2 {
         display: none;
     }
 
+    .mobile-disappear {
+        display: none;
+    }
+
+    .mobile-tablet {
+        display: block;
+    }
+
     .right-section {
         display: none;
     }
+
       }
     
       @media only screen and (max-width: 480px) {
@@ -745,6 +765,10 @@ label.color-change-2 {
             display: none;
         }
 
+        .mobile-disappear {
+            display: none;
+        }
+
           }
     
           @media only screen and (max-width: 768px) {
@@ -761,6 +785,10 @@ label.color-change-2 {
             }
 
             .right-section {
+                display: none;
+            }
+
+            .mobile-disappear {
                 display: none;
             }
 
