--- a/main.css
+++ b/main.css
@@ -91,6 +91,11 @@ body.serif {
     font-family: "Book Antiqua", serif;
     }
 
+.breathing-room {
+        width: 100vw;
+        height:25px;
+    }
+
 .color-change-container {
     width: 100%;
     padding: 20px 0;
@@ -318,10 +323,12 @@ h2 {
 
 .middle-section {
     width: 60vw;
+    height: 100%;
 
-    margin-top: 50px;
+   
 
     padding: 20px;
+    padding-top: 90px;
   
 
     border-left: 2px solid;
