--- a/main.css
+++ b/main.css
@@ -343,7 +343,7 @@ h2 {
 }
 
 .middle-section p {
-    max-width: 700px;
+    max-width: 50vw;
     font-size: 1.2rem;
     text-align: left;
     position: relative;
@@ -359,7 +359,7 @@ h2 {
 }
 
 .middle-section li {
-    max-width: 700px;
+    max-width: 50vw;
 }
 
 .mobile-disappear {
