--- a/main.css
+++ b/main.css
@@ -267,6 +267,8 @@ h2 {
     display: flex;
     flex-direction: column;
     align-items: center;
+    max-width: 800px;
+    padding: 20px;
 }
 
 
@@ -328,7 +330,7 @@ h2 {
    
 
     padding: 20px;
-    padding-top: 90px;
+    padding-top: 100px;
   
 
     border-left: 2px solid;
@@ -336,6 +338,7 @@ h2 {
 
     display: flex;
     flex-direction: column;
+    justify-content: center;
 
     position: relative;
     left: 20vw;
