--- a/main.css
+++ b/main.css
@@ -269,7 +269,7 @@ h2 {
     justify-content: center;
     align-items: center;
     align-items: center;
-    max-width: 800px;
+    /* max-width: 800px; */
     padding: 20px;
 }
 
