--- a/main.css
+++ b/main.css
@@ -95,6 +95,17 @@ body.serif {
         width: 100vw;
         height:50px;
     }
+.buttons-practice-photos {
+        display: flex; 
+        flex-direction: column; 
+        justify-content: center;
+         align-items: center;
+         gap: 15px;
+
+         position: absolute;
+         bottom: 0;
+
+    }
 
 .color-change-container {
     width: 100%;
@@ -237,6 +248,13 @@ h2 {
     
 }
 
+hr {
+    margin-top: 30px;
+    width: 100%;
+    border: 2px solid;
+    height: 2px;
+}
+
 .image-center {
     text-align: center;
     margin: 0 auto;
@@ -323,6 +341,8 @@ h2 {
     width: fit-content;
     padding-right: 15px;
     border-radius: 3px;
+
+    box-shadow: 0 0 10px black;
     }
 
 .middle-section {
@@ -414,14 +434,40 @@ h2 {
     padding: 10px;
         }
 
-        .next-page-button a {
-            color: black;
-        }
+.next-page-button a {
+    color: black;
+     }
 
 .next-page-button:hover {
     background-color:#cfd1ed;
     box-shadow: 0 0 15px white;
 }
+
+.next-page-button-practice {
+           
+    background-color: white;
+
+    width: fit-content;
+    height: fit-content;
+    border: 2px solid;
+
+    font-size: 1.5rem;
+    border-radius: 3px; 
+
+    cursor: pointer;
+    padding: 10px;
+        
+                }
+
+.next-page-button-practice a {
+    color: black;
+}
+
+.next-page-button-practice:hover {
+    background-color:#cfd1ed;
+    box-shadow: 0 0 15px white;
+}
+
 
 .open .close-button {
     display: block; /* Show close button when menu is opened */
@@ -456,11 +502,11 @@ p {
     transform: rotate(3deg);
     cursor: pointer;
     box-shadow: 0 0 15px white;
-    /* border: 2px solid; */
     
 }
 
 .practice-photo-container {
+    width: fit-content;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -539,8 +585,16 @@ p {
     transition: width 0.3s ease;
 }
 
+.zine-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 15px;
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
 
-
+/* ___________________________________________________________________________ */
 
 /* COLOR CHANGE 1 (WHITE BACKGROUND BLACK TEXT)  */
 
@@ -553,12 +607,21 @@ body.color-change-1 {
     border: none;
 }
 
+.menu-items li:hover.color-change-1 {
+    box-shadow: 0 0 10px white;
+}
+
 a.color-change-1 {
     color: blue;
 }
 
 h1.color-change-1 {
     outline: none;
+}
+
+.practice-photo:hover.color-change-1 {
+
+box-shadow: 0 0 15px black;
 }
 
 
