--- a/main.css
+++ b/main.css
@@ -287,7 +287,7 @@ hr {
     justify-content: center;
     align-items: center;
     align-items: center;
-    max-width: 800px;
+    /* max-width: 800px; */
     padding: 20px;
 }
 
