if this doesn't work i will scream

--- a/main.css
+++ b/main.css
@@ -361,6 +361,7 @@ hr {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
 
     position: relative;
     left: 20vw;
