--- a/main.css
+++ b/main.css
@@ -587,6 +587,7 @@ p {
 }
 
 .zine-container {
+    max-width: 900px;
     display: flex;
     flex-direction: column;
     justify-content: center;
